# MadarDashboard

./: .env  .env.example  .env.production  .gitignore  AUDIT_REPORT.md  BUNDLES_UI_NOTES.md  CLAUDE.md  DESIGN.md  HANDOFF_UI_REBUILD.md  IA_REORG_REPORT.md  INVENTORY_FRONTEND_HANDOFF.md  INVENTORY_OVERHAUL_FRONTEND_SYNC.md  PRODUCT.md  README.md  SHIFT_AUTH_FIX_HANDOFF.md  SUFRIX-PORTFOLIO-CONTEXT.md  UNIT_RULES_FRONTEND_PROMPT.md  backfill_nested_translations.sh  copy_components.py  debug.txt  edit_public_menu.py  eslint.config.js  fix.sh  fix_analytics.cjs  fix_frontend.py  fix_orders.py  fix_public_menu.py  fix_tables.py  fix_tests.cjs  fix_types.py  fix_types_2.py  fix_types_3.py  frontend_advisor_code.txt  generate_frontend_prompts.py  get.html  index.html  merge_i18n.py  openapi.json  order.html  orval.config.ts  (+15 more)
.claude/: launch.json
.github/workflows/: deploy.yml  release.yml
.impeccable/: design.json
brag-output/: brag-plan.md  composition-brief.md
brag-output/composition/: package-lock.json  package.json  remotion.config.ts
docs/: architecture.md  design-system.md
frontend_agent_prompts/: 00_setup_infrastructure.md
public/: ShowTellerCup.lottie  robots.txt  sitemap.xml
screenshots/: capture.mjs
scripts/: capture-customer-shots.mjs  capture-feature-shots.mjs  capture-shots.mjs  optimize-images.mjs  verify-landing.mjs
src/: App.tsx  fontsource.d.ts  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: menu.ts  (+1 more)
(+624 files in other folders)
